added master project "Malleable, High-throughput Multicast for Clusters"

--- a/content/student-projects.html
+++ b/content/student-projects.html
@@ -334,7 +334,27 @@ For more information, contact
 <a href="http://www.cs.vu.nl/~fjseins/">Dr. Frank J. Seinstra</a>.
 </p>
 
+<li><b>Malleable, High-througput Multicast for Clusters</b></li>
 
+<p>
+Grid applications often need to transfer a large amount of data from one 
+compute node to multiple others. Such a multicast operation is challenging due 
+to the heterogeneous bandwidth characteristics between and within grid sites.
+We have implemented a multicast algorithm in Java on top of the IPL that is 
+based on BitTorrent, but specifically optimized for multiple, geographically 
+distributed clusters. Nodes within the same cluster cooperate to improve the 
+overall throughput. 
+</p>
+
+<p>
+In this project, you will extend our existing multicast algorithm with 
+<i>malleability</i>: nodes should be able to join and leave during multicast 
+operation. You will design and implement the necessary additions, and 
+evaluate them on emulated and real-world grid systems.      
+</p>
+
+<p>For more information, contact
+<a href="http://www.cs.vu.nl/~kielmann/">Thilo Kielmann</a>.</p>
 
 <li><b>Intelligent Hardware Selection for Multimedia Applications (challenging)</b></li>
 
@@ -366,6 +386,7 @@ code sequence, by doing an exhaustive search. <b>Note:</b> this project requires
 some literature study,
 and may not even be feasible in the current form.
 </p>
+
 </ul>
 
 <hr>
