new award blurb on MaRVIN team

--- a/content/awards.html
+++ b/content/awards.html
@@ -1,3 +1,35 @@
+<p><img src="images/awards/billion-tripple.png" border="0" hspace="5" vspace="0" width="350" height="230" align="left"
+/></p>
+
+<h1>MaRVIN Team wins 3rd prize at Billion Tripple track of Semantic Web Challenge 2008</h1>
+
+<p>The <a href="http://challenge.semanticweb.org/">Semantic Web challenge</a>
+is the premier international event for demonstrating practical progress towards
+achieving the vision of the Semantic Web. The central idea of the Semantic Web
+is to extend the current human-readable web by encoding some of the semantics
+of resources in a machine-processable form. Moving beyond syntax opens the door
+to more advanced applications and functionality on the Web. Computers will be
+better able to search, process, integrate and present the content of these
+resources in a meaningful, intelligent manner.</p>
+
+<p>In 2008, the challenge for the first time included the "Billion Triple
+track", whose primary goal is to demonstrate scalability of Semantic Web
+architectures and applications.  The participants were given a collection of
+one billion triples (single facts) and had to demonstrate added value from the
+implicit semantics in the data. This could involve browsing and visualization
+of the data, could include inferencing to add implicit information to the
+dataset, etc.</p>
+
+<p>The <a href="http://larkc.eu/marvin">MaRVIN</a> team used the Ibis
+Portability Layer to develop a self-organising distributed reasoner that can
+handle these large amounts of data. The MaRVIN system was demonstrated on the
+DAS-3 distributed supercomputer and was much appreciated for its innovative
+ideas, winning the 3rd prize in the Billion Triples track.</p>
+
+<p>&nbsp;</p><p>&nbsp;</p>
+<hr size="2"/>
+<br /><br /><br /><p>
+
 <p><img src="images/awards/DACH-BS-Award.gif" border="0" hspace="5" vspace="0" width="250" height="300" align="left"
 /></p><h1>Ibis wins first prize at DACH 2008 - Basic Category</h1><p><a
     href="http://www.cluster2008.org/challenge/">DACH 2008</a>, or the First
