Added pages for each submenu.

--- a/smartsockets.html
+++ b/smartsockets.html
@@ -137,7 +137,7 @@
             </tr>
             <tr>
                 <td class=menu>
-                    <a href="smartsockets.html" class="menu menu_active level1">Smartsockets</a>
+                    <a href="smartsockets.html" class="menu menu_active level1">SmartSockets</a>
                 </td>
             </tr>
             <tr>
