--- a/zorilla.html
+++ b/zorilla.html
@@ -137,7 +137,7 @@
             </tr>
             <tr>
                 <td class=menu>
-                    <a href="smartsockets.html" class="menu level1">Smartsockets</a>
+                    <a href="smartsockets.html" class="menu level1">SmartSockets</a>
                 </td>
             </tr>
             <tr>
