Refer to JavaGAT download page

--- a/content/downloads.html
+++ b/content/downloads.html
@@ -1,8 +1,12 @@
 <p>Ibis downloads are available at the <a
     href="http://gforge.cs.vu.nl/gf/project/ibis/frs/">gforge
-    project page</a> (loaded in a frame below)</p> 
+    project page</a> (loaded in a frame below).</p>
+<p>The JavaGAT downloads are available on its own <a
+    href="http://gforge.cs.vu.nl/gf/project/javagat/frs/">gforge
+	    project page</a>.</p>
 
-    <iframe src="http://gforge.cs.vu.nl/gf/project/ibis/frs/" 
+
+<iframe src="http://gforge.cs.vu.nl/gf/project/ibis/frs/" 
 	
 	width=975px
 	height=1000px
@@ -11,4 +15,3 @@
 
     >
 </iframe>
-
