Added news items: javagat, marvin

--- a/content/users.html
+++ b/content/users.html
@@ -14,7 +14,7 @@ Ibis and are more than happy to add any projects which uses Ibis to this page. <
 Layer to implement their <a href="http://www.larkc.eu/marvin/">MaRVIN</a>
 system for distibuted RDF inference. Their submission to the <a
     href="http://challenge.semanticweb.org/">Billion Triple Challenge</a> using
-this software won 3rd place</p>
+this software won 3rd place.</p>
 
 <p><strong>From the Marvin Page:</strong> We have built MaRVIN (Massive RDF Versatile Inference
 Network), a parallel and distributed platform for performing RDF(S) inference
