Added news items to "Whats new" column

--- a/content/news-summary.html
+++ b/content/news-summary.html
@@ -1,5 +1,17 @@
 <tr>
     <td class="news">
+	<a href="news.html#javagat2.0.4" class="news">JavaGAT 2.0.4 released</a>
+    </td>
+</tr>
+
+<tr>
+    <td class="news">
+	<a href="news.html#MaRVIN" class="news">MaRVIN Team wins 3rd prize at Billion Tripple track of Semantic Web Challenge 2008</a>
+    </td>
+</tr>
+
+<tr>
+    <td class="news">
 	<a href="news.html#smartsockets-1.4" class="news">Smartsockets 1.4 released</a>
     </td>
 </tr>
