--- a/content/awards.html
+++ b/content/awards.html
@@ -1,7 +1,7 @@
 <p><img src="images/awards/billion-tripple.png" border="0" hspace="5" vspace="0" width="350" height="230" align="left"
 /></p>
 
-<h1>MaRVIN Team wins 3rd prize at Billion Tripple track of Semantic Web Challenge 2008</h1>
+<h1>MaRVIN Team wins 3rd prize at Billion Triple track of Semantic Web Challenge 2008</h1>
 
 <p>The <a href="http://challenge.semanticweb.org/">Semantic Web challenge</a>
 is the premier international event for demonstrating practical progress towards
