added a documentation section to the site

--- a/content/tutorial.html
+++ b/content/tutorial.html
@@ -1,8 +1,6 @@
 <h2>Tutorial</h2>
 
-<p>Program and slides for the Ibis Tutorial at CCGRID 2008</p>
-
-<p>Update: slides are now final versions given at tutorial</p>
+<p>Slides for the Ibis Tutorial given at CCGRID 2008</p>
 
 <ul>
 	<li>Introduction
@@ -26,8 +24,6 @@
 		<a href=tutorial/20080519-CCGrid08-Part-4-SmartSockets.odp>[odp]</a>
 
 	</ul>
-
-	<li>Lunch Break
 
 	<li>Using The Grid
 
