--- a/downloads.html
+++ b/downloads.html
@@ -66,6 +66,9 @@
         <td class=topmenu>
             <a class=topmenu href="projects.html">Projects</a>
         </td>
+        <td class=topmenu>
+            <a class=topmenu href="documentation.html">Documentation</a>
+        </td>
         <td class="topmenu topmenu_active">
             <a class="topmenu topmenu_active" href="downloads.html">Downloads</a>
         </td>
