--- a/papers.html
+++ b/papers.html
@@ -67,6 +67,9 @@
             <a class=topmenu href="projects.html">Projects</a>
         </td>
         <td class=topmenu>
+            <a class=topmenu href="documentation.html">Documentation</a>
+        </td>
+        <td class=topmenu>
             <a class=topmenu href="downloads.html">Downloads</a>
         </td>
         <td class="topmenu topmenu_active">
@@ -103,11 +106,6 @@
             <tr>
                 <td class=menu>
                     <a href="talks.html" class="menu level0">Talks</a>
-                </td>
-            </tr>
-            <tr>
-                <td class=menu>
-                    <a href="tutorial.html" class="menu level0">Tutorial</a>
                 </td>
             </tr>
         </table>
