--- a/documentation.html
+++ b/documentation.html
@@ -100,12 +100,12 @@
         <table class=menu>
             <tr>
                 <td class=menu>
-                    <a href="documentation.html" class="menu level0">Overview</a>
+                    <a href="documentation.html" class="menu menu_active level0">Overview</a>
                 </td>
             </tr>
             <tr>
                 <td class=menu>
-                    <a href="tutorial.html" class="menu menu_active level0">Tutorial</a>
+                    <a href="tutorial.html" class="menu level0">Tutorial</a>
                 </td>
             </tr>
             <tr>
@@ -118,7 +118,7 @@
 
     <!-- CONTENT -->
     <td class=main id=content_cell>
-        <?php include ("content/tutorial.html"); ?>
+        <?php include ("content/documentation.html"); ?>
     </td>
 </tr>
 
