--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
             <a class=topmenu href="projects.html">Projects</a>
         </td>
         <td class=topmenu>
+            <a class=topmenu href="documentation.html">Documentation</a>
+        </td>
+        <td class=topmenu>
             <a class=topmenu href="downloads.html">Downloads</a>
         </td>
         <td class=topmenu>
