--- a/content/ipl.html
+++ b/content/ipl.html
@@ -1,6 +1,6 @@
 <h2>The Ibis Portability Layer (IPL)</h2>
 
-<p>The Ibis Portability layer (IPL) is a communication library is specifically
+<p>The Ibis Portability layer (IPL) is a communication library specifically
 designed for usage in a grid environment. It has a number of properties which
 help to achieve its goal of providing programmers with an easy to use, reliable
 grid communication infrastructure</p>
