added a "demos" section to the site

--- a/demos.html
+++ b/demos.html
@@ -72,11 +72,11 @@
         <td class=topmenu>
             <a class=topmenu href="downloads.html">Downloads</a>
         </td>
-        <td class="topmenu topmenu_active">
-            <a class="topmenu topmenu_active" href="papers.html">Publications</a>
-        </td>
         <td class=topmenu>
-            <a class=topmenu href="demos.html">Demos</a>
+            <a class=topmenu href="papers.html">Publications</a>
+        </td>
+        <td class="topmenu topmenu_active">
+            <a class="topmenu topmenu_active" href="demos.html">Demos</a>
         </td>
         <td class=topmenu>
             <a class=topmenu href="awards.html">Awards</a>
@@ -97,26 +97,14 @@
 </tr>
 
 <tr>
-<!-- SUB MENU -->
+<!-- EMPTY SUB MENU -->
 
     <td class=main>
-        <table class=menu>
-            <tr>
-                <td class=menu>
-                    <a href="papers.html" class="menu menu_active level0">Papers</a>
-                </td>
-            </tr>
-            <tr>
-                <td class=menu>
-                    <a href="talks.html" class="menu level0">Talks</a>
-                </td>
-            </tr>
-        </table>
+        <img alt="gradient" src="images/gradient.png">
     </td>
-
     <!-- CONTENT -->
     <td class=main id=content_cell>
-        <?php include ("content/papers.html"); ?>
+        <?php include ("content/demos.html"); ?>
     </td>
 </tr>
 
