--- a/talks.html
+++ b/talks.html
@@ -76,6 +76,9 @@
             <a class="topmenu topmenu_active" href="papers.html">Publications</a>
         </td>
         <td class=topmenu>
+            <a class=topmenu href="demos.html">Demos</a>
+        </td>
+        <td class=topmenu>
             <a class=topmenu href="awards.html">Awards</a>
         </td>
         <td class=topmenu>
