--- a/awards.html
+++ b/awards.html
@@ -75,6 +75,9 @@
         <td class=topmenu>
             <a class=topmenu href="papers.html">Publications</a>
         </td>
+        <td class=topmenu>
+            <a class=topmenu href="demos.html">Demos</a>
+        </td>
         <td class="topmenu topmenu_active">
             <a class="topmenu topmenu_active" href="awards.html">Awards</a>
         </td>
