--- a/content/demos.html
+++ b/content/demos.html
@@ -1,1 +1,28 @@
 <h2>Demos</h2>
+
+<h2>A Demonstration of Color Based Object Recognition on a World Wide Grid</h2>
+<div>
+<object width="425" height="344">
+<param name="movie" value="http://www.youtube.com/v/_WUA1WT_xFQ&hl=en&fs=1&"></param>
+<param name="allowFullScreen" value="true"></param>
+<param name="allowscriptaccess" value="always"></param>
+<embed src="http://www.youtube.com/v/_WUA1WT_xFQ&hl=en&fs=1&" type="application/x-shockwave-flash"
+allowscriptaccess="always" allowfullscreen="true" width="425" height="344"></embed>
+</object>
+<p>This video shows various aspects of the Ibis software including our
+deployment tool, resource management tools and visualization
+system. It also demonstrates an interesting distributed application
+which is able to learn to recognize objects placed before a webcam or
+the camera of an Android mobile phone. This requires a large amount of
+computation power which is derived from resources across the
+globe.</p>
+<!-- Coming Soon
+<p>Versions available for Download:
+<ul>
+<li><a href="video/IbisDemo.wmv" title="Ibis Demo in WMV format.">IbisDemo.wmv</a></li>
+<li><a href="video/IbisDemo.mpg" title="Ibis Demo in MPG format.">IbisDemo.mpg</a></li>
+<li><a href="video/IbisDemo.m4v" title="Ibis Demo in M4V format.">IbisDemo.m4v</a></li>
+</ul>
+</p>
+-->
+</div>
