Fix link to mp4 version and add file sizes.

--- a/content/demos.html
+++ b/content/demos.html
@@ -21,9 +21,12 @@ power is required, which we assemble from resources across the
 globe.</p>
 <p>Versions available for Download:
 <ul>
-<li><a href="video/IbisDemo.wmv" title="Ibis Demo in WMV format.">IbisDemo.wmv</a></li>
-<li><a href="video/IbisDemo.mpg" title="Ibis Demo in MPG format.">IbisDemo.mpg</a></li>
-<li><a href="video/IbisDemo.m4v" title="Ibis Demo in M4V format.">IbisDemo.m4v</a></li>
+<li><a href="video/IbisDemo.wmv" 
+       title="Ibis Demo in WMV format.">IbisDemo.wmv</a> (59M)</li>
+<li><a href="video/IbisDemo.mp4" 
+       title="Ibis Demo in MP4 format.">IbisDemo.mp4</a> (60M)</li>
+<li><a href="video/IbisDemo.m4v" 
+       title="Ibis Demo in M4V format.">IbisDemo.m4v</a> (39M)</li>
 </ul>
 </p>
 </div>
