Change title and add note about sound for Frank. :)

--- a/content/demos.html
+++ b/content/demos.html
@@ -1,6 +1,6 @@
 <h2>Demos</h2>
 
-<h2>A Demonstration Of <br/>Color Based Object Recognition<br/>On A World Wide Grid</h2>
+<h2>A Demonstration Of <br/>Color Based Object Recognition<br/>On A Real-World Distributed System</h2>
 <div>
 <object width="600" height="486">
 <param name="movie" value="http://www.youtube.com/v/_WUA1WT_xFQ&hl=en&fs=1&"></param>
@@ -9,6 +9,7 @@
 <embed src="http://www.youtube.com/v/_WUA1WT_xFQ&hl=en&fs=1&" type="application/x-shockwave-flash"
 allowscriptaccess="always" allowfullscreen="true" width="600" height="486"></embed>
 </object>
+<p>Note: This video includes audio commentary.</p>
 <p>This video shows various aspects of
 the <a href="http://www.cs.vu.nl/ibis" title="Ibis Homepage">Ibis</a>
 software including our deployment tool, resource management tools and
