--- a/content/applications.html
+++ b/content/applications.html
@@ -1,4 +1,4 @@
-<h2>Programming Models</h2>
+<h2>Applications</h2>
 
 <p>Within the Ibis project, we work on a large number of parallel and
 distributed applications. For now, only one is listed on this site: SAT4Satin.
