Updated for IPL 2.2

--- a/content/ipl.html
+++ b/content/ipl.html
@@ -71,7 +71,9 @@ Virtual Machine Available.</p>
 <p>Like the TCP version, the Ibis based on Smartsockets is written in
 100% pure Java.  However, since it uses the Smartsockets library of the
 Ibis project it also has very good support for dealing with network
-difficulties such as firewalls and NATs.</p>
+difficulties such as firewalls and NATs. Currently, this is the default
+IPL implementation used.
+</p>
 
 <h4>MPIbis</h4>
 
