--- a/content/news-summary.html
+++ b/content/news-summary.html
@@ -1,5 +1,11 @@
 <tr>
     <td class="news">
+	<a href="news.html#IPL2.2" class="news">IPL 2.2 released</a>
+    </td>
+</tr>
+
+<tr>
+    <td class="news">
 	<a href="news.html#javagat2.0.5" class="news">JavaGAT 2.0.5 released</a>
     </td>
 </tr>
