--- a/content/news.html
+++ b/content/news.html
@@ -1,6 +1,13 @@
 <!-- Fancy newspaper banner :) -->
 <img class=banner src="images/banners/newspaper-banner.png" alt="Banner">
 
+<a name="IPL2.2"></a> 
+<h4>IPL 2.2 released</h4>
+<p>November 2009: Ibis Portability Layer (IPL) version 2.2 is now available!
+For more information and downloads, see the <a href="ipl.html">IPL subproject page</a>.
+</p>
+
+
 <a name="javagat2.0.5"></a> 
 <h4>JavaGAT 2.0.5 released</h4> 
 <p>April 2009: JavaGAT 2.0.5 is now available from its
