--- a/content/news-summary.html
+++ b/content/news-summary.html
@@ -1,5 +1,17 @@
 <tr>
     <td class="news">
+	<a href="news.html#RMI2.2" class="news">Ibis RMI 2.2 released</a>
+    </td>
+</tr>
+
+<tr>
+    <td class="news">
+	<a href="news.html#GMI2.2" class="news">Ibis GMI 2.2 released</a>
+    </td>
+</tr>
+
+<tr>
+    <td class="news">
 	<a href="news.html#IPL2.2" class="news">IPL 2.2 released</a>
     </td>
 </tr>
@@ -37,23 +49,5 @@
 <tr>
     <td class="news">
 	<a href="news.html#dach" class="news">Press Release: Ibis wins Data Analysis Challenge for Finding Supernovae</a>
-    </td>
-</tr>
-
-<tr>
-    <td class="news">
-	<a href="news.html#rmi2.1" class="news">Ibis RMI 2.1 released</a>
-    </td>
-</tr>
-
-<tr>
-    <td class="news">
-	<a href="news.html#mpj2.1" class="news">MPJ 2.1 released</a>
-    </td>
-</tr>
-
-<tr>
-    <td class="news">
-	<a href="news.html#gmi2.1" class="news">GMI 2.1 released</a>
     </td>
 </tr>
