--- a/content/news.html
+++ b/content/news.html
@@ -1,6 +1,20 @@
 <!-- Fancy newspaper banner :) -->
 <img class=banner src="images/banners/newspaper-banner.png" alt="Banner">
 
+<a name="GMI2.2"></a> 
+<h4>Ibis GMI 2.2 released</h4>
+<p>November 2009: Ibis GMI version 2.2 is now available!
+For more information and downloads, see the <a
+    href="gmi.html">Ibis GMI subproject page</a>.
+</p>
+
+<a name="RMI2.2"></a> 
+<h4>Ibis RMI 2.2 released</h4>
+<p>November 2009: Ibis RMI version 2.2 is now available!
+For more information and downloads, see the <a
+    href="rmi.html">Ibis RMI subproject page</a>.
+</p>
+
 <a name="IPL2.2"></a> 
 <h4>IPL 2.2 released</h4>
 <p>November 2009: Ibis Portability Layer (IPL) version 2.2 is now available!
