Added stuff from the new MPJ 2.2 release

--- a/content/news-summary.html
+++ b/content/news-summary.html
@@ -1,5 +1,11 @@
 <tr>
     <td class="news">
+	<a href="news.html#MPJ2.2" class="news">Ibis MPJ 2.2 released</a>
+    </td>
+</tr>
+
+<tr>
+    <td class="news">
 	<a href="news.html#RMI2.2" class="news">Ibis RMI 2.2 released</a>
     </td>
 </tr>
