--- a/content/news.html
+++ b/content/news.html
@@ -1,6 +1,13 @@
 <!-- Fancy newspaper banner :) -->
 <img class=banner src="images/banners/newspaper-banner.png" alt="Banner">
 
+<a name="MPJ2.2"></a> 
+<h4>Ibis MPJ 2.2 released</h4>
+<p>November 2009: Ibis MPJ version 2.2 is now available!
+For more information and downloads, see the <a
+    href="mpj.html">Ibis MPJ subproject page</a>.
+</p>
+
 <a name="GMI2.2"></a> 
 <h4>Ibis GMI 2.2 released</h4>
 <p>November 2009: Ibis GMI version 2.2 is now available!
