Fixed "the following table" where there was no table

--- a/content/javagat.html
+++ b/content/javagat.html
@@ -32,7 +32,7 @@ The GAT engine dynamically "routes" the API calls to the correct grid middleware
 </p>
 
 <p>We have plugins (called adaptors) for many different grid middleware systems.
-The following table lists the adaptors that come with the standard JavaGAT distribution.
+The list of available adaptors can be found <a href="javagat-adaptors.html">here</a>.
 All adaptors are implemented in java, and libraries that are needed are included in the distribution.
 JavaGAT does not rely on any pre installed external packages or libraries.
 </p>
