Added Aerogrid as user

--- a/content/users.html
+++ b/content/users.html
@@ -186,7 +186,7 @@ Ibis has been used for many of the KOALA scheduling experiments.
 
     <tr>
 	<td>Louisiane State University, University of Texas</td>
-	<td>A computational chemistry middleware project that needs a lot of grid-type features</td>
+	<td>ChemGrid: A computational chemistry middleware project that needs a lot of grid-type features</td>
     </tr>
 
     <tr>
@@ -202,54 +202,56 @@ Ibis has been used for many of the KOALA scheduling experiments.
     </tr>
 
     <tr>
+	<td><a href="http://datafinder.sourceforge.net">DataFinder</a>, from the AeroGrid project, German Aerospace Center, Germany <a href="http://www.aero-grid.de">http://www.aero-grid.de</a></td>
+	<td>Job submission and file access</td>
+    </tr>
+
+    <tr>
 	<td>Georgia State University</td>
 	<td>unknown</td>
     </tr>
 
     <tr>
-	<td>The Multimedian project <a href="http://www.multimedian.nl">www.multimedian.nl</td>
-	    <td>Uses JavaGAT to start parallel jobs on the grid.</td>
-	</tr>
+	<td>The Multimedian project <a href="http://www.multimedian.nl">www.multimedian.nl</a></td>
+	<td>Uses JavaGAT to start parallel jobs on the grid.</td>
+    </tr>
 
-	<tr>
-	    <td>Zuse Institute Berlin, Germany</td>
-	    <td>unknown</td>
-	</tr>
-
-
-	<tr>
-	    <td>INRIA, France</td>
-	    <td>unknown</td>
-	</tr>
-
-	<tr>
-	    <td>The TextGrid project <a href="http://www.textgrid.de">www.textgrid.de</td>
-		<td>unknown</td>
-	    </tr>
-
-	    <tr>
-		<td><a href="http://scgroup2.ceid.upatras.gr:8000/JylabHomepage">Jylab<a></td>
-			<td>unknown</td>
-		    </tr>
-
-		    <tr>
-			<td><a href="http://www.integrade.org.br">The Integrade Project<a></td>
-				<td>Integrade adaptor set (an object oriented grid middleware layer), an Eclipse based IDE</td>
-			    </tr>
-
-			    <tr>
-				<td><a href="http://www.coregrid.net">CoreGRID<a></td>
-					<td>unknown</td>
-				    </tr>
-
-				    <tr>
-					<td><a href="http://www.ac.upc.edu">Universitat Politècnica de Catalunya (UPC)</a> /
-					    <a href="http://www.bsc.es">Barcelona Supercomputing Center (BSC)</a>
-					</td>
-					<td>Job submission and file transfer in the COMP Superscalar Grid framework</td>
-				    </tr>
-
-				</table>
+    <tr>
+	<td>Zuse Institute Berlin, Germany</td>
+	<td>unknown</td>
+    </tr>
 
 
+    <tr>
+	<td>INRIA, France</td>
+	<td>unknown</td>
+    </tr>
 
+    <tr>
+	<td>The TextGrid project <a href="http://www.textgrid.de">www.textgrid.de</a></td>
+	<td>files and jobs</td>
+    </tr>
+
+    <tr>
+	<td><a href="http://scgroup2.ceid.upatras.gr:8000/JylabHomepage">Jylab</a></td>
+	<td>unknown</td>
+    </tr>
+
+    <tr>
+	<td><a href="http://www.integrade.org.br">The Integrade Project</a></td>
+	<td>Integrade adaptor set (an object oriented grid middleware layer), an Eclipse based IDE</td>
+    </tr>
+
+    <tr>
+	<td><a href="http://www.coregrid.net">CoreGRID</a></td>
+	<td>unknown</td>
+    </tr>
+
+    <tr>
+	<td><a href="http://www.ac.upc.edu">Universitat Politècnica de Catalunya (UPC)</a> /
+		<a href="http://www.bsc.es">Barcelona Supercomputing Center (BSC)</a>
+	</td>
+	<td>Job submission and file transfer in the COMP Superscalar Grid framework</td>
+    </tr>
+
+</table>
