Added some more users

--- a/content/users.html
+++ b/content/users.html
@@ -207,6 +207,11 @@ Ibis has been used for many of the KOALA scheduling experiments.
     </tr>
 
     <tr>
+	<td><a href="http://www.partnergrid.de">PartnerGrid</a></td>
+	<td>Job submission</td>
+    </tr>
+
+    <tr>
 	<td>Georgia State University</td>
 	<td>unknown</td>
     </tr>
@@ -245,6 +250,11 @@ Ibis has been used for many of the KOALA scheduling experiments.
     <tr>
 	<td><a href="http://www.coregrid.net">CoreGRID</a></td>
 	<td>unknown</td>
+    </tr>
+
+    <tr>
+	<td><a href="http://www.larkc.eu">The Large Knowledge Collider project (LarKC)<a></td>
+	<td>Job submission, files</td>
     </tr>
 
     <tr>
