updated link: old one did not work anymore

--- a/content/users.html
+++ b/content/users.html
@@ -123,7 +123,7 @@ which is a very high-level, object-oriented, dynamically-typed language.</p>
 
 <p>Sasha Ruppert from the Universität Erlangen-Nürnberg in Erlangen,
 Germany built a Grid-wide file system using Ibis as the communication
-layer. Click <a href="http://www2.cs.fau.de/Lehre/SA-DA/GridFileSystem.xml">here</a> for more information.</p>
+layer. Click <a href="http://www2.cs.fau.de/EN/teaching/thesis/thesis_i2D00336.html">here</a> for more information.</p>
 
 <h3>The KOALA grid scheduler</h3>
 <p><a href="http://www.st.ewi.tudelft.nl/koala/">KOALA</a> is a grid
