Webpie won SCALE 2010 challenge

--- a/content/news-summary.html
+++ b/content/news-summary.html
@@ -1,5 +1,11 @@
 <tr>
     <td class="news">
+	<a href="news.html#SCALE2010" class="news">WebPie wins the SCALE 2010 challenge</a>
+    </td>
+</tr>
+
+<tr>
+    <td class="news">
 	<a href="news.html#Satin2.2" class="news">Ibis Satin 2.2 released</a>
     </td>
 </tr>
