--- a/content/news.html
+++ b/content/news.html
@@ -1,6 +1,13 @@
 <!-- Fancy newspaper banner :) -->
 <img class=banner src="images/banners/newspaper-banner.png" alt="Banner">
 
+<a name="SCALE2010"></a>
+<h4>SCALE Challenge 2010</h4>
+<p>
+May 2010: WebPie won 1st place at the <a href="http://www.manjrasoft.com/ccgrid2010/scale2010.html">SCALE Challenge 2010</a>!
+See <a href="www.cs.vu.nl/~frankh/spool/SCALE2010-challenge-submission.pdf">the submission paper</a>. 
+</p>
+
 <a name="Satin2.2"></a> 
 <h4>Ibis Satin 2.2 released</h4>
 <p>December 2009: Ibis Satin version 2.2 is now available!
