--- a/content/awards.html
+++ b/content/awards.html
@@ -1,3 +1,10 @@
+<h1>WebPie wins 1st price at the SCALE Challenge 2010!</h1>
+<p>Details soon on this page!</p>
+
+<p>&nbsp;</p><p>&nbsp;</p>
+<hr size="2"/>
+<br /><br /><br /><p>
+
 <p><img src="images/awards/billion-tripple.png" border="0" hspace="5" vspace="0" width="350" height="230" align="left"
 /></p>
 
