--- a/content/news.html
+++ b/content/news.html
@@ -5,7 +5,7 @@
 <h4>SCALE Challenge 2010</h4>
 <p>
 May 2010: WebPie won 1st place at the <a href="http://www.manjrasoft.com/ccgrid2010/scale2010.html">SCALE Challenge 2010</a>!
-See <a href="www.cs.vu.nl/~frankh/spool/SCALE2010-challenge-submission.pdf">the submission paper</a>. 
+See <a href="http://www.cs.vu.nl/~frankh/spool/SCALE2010-challenge-submission.pdf">the submission paper</a>. 
 </p>
 
 <a name="Satin2.2"></a> 
