--- a/content/awards.html
+++ b/content/awards.html
@@ -1,4 +1,4 @@
-<h1>WebPie wins 1st price at the SCALE Challenge 2010!</h1>
+<h1>WebPie wins 1st prize at the SCALE Challenge 2010!</h1>
 <p>Details soon on this page!</p>
 
 <p>&nbsp;</p><p>&nbsp;</p>
