--- a/content/demos.html
+++ b/content/demos.html
@@ -1,6 +1,7 @@
 <h2>Demos</h2>
 
-<h2>A Demonstration Of <br/>Color Based Object Recognition<br/>On A Real-World Distributed System</h2>
+<h3>A Demonstration Of Color Based Object Recognition On A Real-World Distributed System</h3>
+
 <div>
 <object width="600" height="486">
 <param name="movie" value="http://www.youtube.com/v/_WUA1WT_xFQ&hl=en&fs=1&"></param>
@@ -31,3 +32,17 @@ globe.</p>
 </ul>
 </p>
 </div>
+
+<h2>Galaxy Simulation (Barnes-Hut) Demo</h2>
+
+<div>
+    <object width="600" height="486"><param name="movie" value="http://www.youtube.com/v/TaFDw7_LOkM&hl=en_US&fs=1&"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/TaFDw7_LOkM&hl=en_US&fs=1&" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="600" height="486"></embed></object>
+</div>
+
+<p>Note: This video includes audio commentary.</p>
+
+<p>This video shows a galaxy simulation written with Satin (one of the Ibis programming models) and deployed with the JavaGAT</p>
+
+<p>Download this video 
+<a href="http://www.cs.vu.nl/ibis/downloads/barnes-demo-xvid.avi">here</a></p>
+
