changed title, new youtube embed code

--- a/content/demos.html
+++ b/content/demos.html
@@ -2,14 +2,8 @@
 
 <h3>A Demonstration Of Color Based Object Recognition On A Real-World Distributed System</h3>
 
-<div>
-<object width="600" height="486">
-<param name="movie" value="http://www.youtube.com/v/_WUA1WT_xFQ&hl=en&fs=1&"></param>
-<param name="allowFullScreen" value="true"></param>
-<param name="allowscriptaccess" value="always"></param>
-<embed src="http://www.youtube.com/v/_WUA1WT_xFQ&hl=en&fs=1&" type="application/x-shockwave-flash"
-allowscriptaccess="always" allowfullscreen="true" width="600" height="486"></embed>
-</object>
+<iframe title="YouTube video player" class="youtube-player" type="text/html" width="480" height="390" src="http://www.youtube.com/embed/_WUA1WT_xFQ" frameborder="0" allowFullScreen allowscriptaccess=false ></iframe>
+<p><a href="http://www.youtube.com/watch?v=_WUA1WT_xFQ">Watch this video on Youtube</a></p>
 <p>Note: This video includes audio commentary.</p>
 <p>This video shows various aspects of
 the <a href="http://www.cs.vu.nl/ibis" title="Ibis Homepage">Ibis</a>
@@ -31,13 +25,12 @@ globe.</p>
        title="Ibis Demo in M4V format.">IbisDemo.m4v</a> (39M)</li>
 </ul>
 </p>
-</div>
 
 <h2>Galaxy Simulation (Barnes-Hut) Demo</h2>
 
-<div>
-    <object width="600" height="486"><param name="movie" value="http://www.youtube.com/v/TaFDw7_LOkM&hl=en_US&fs=1&"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/TaFDw7_LOkM&hl=en_US&fs=1&" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="600" height="486"></embed></object>
-</div>
+<iframe title="YouTube video player" class="youtube-player" type="text/html" width="480" height="390" src="http://www.youtube.com/embed/TaFDw7_LOkM" frameborder="0" allowFullScreen></iframe>
+
+<p><a href="http://www.youtube.com/watch?v=TaFDw7_LOkM">Watch this video on Youtube</a></p>
 
 <p>Note: This video includes audio commentary.</p>
 
