--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <link rel="shortcut icon" href="favicon.ico">
 
-<title>Ibis: Grids As Promised</title>
+<title>The Ibis Project</title>
 </head>
 
 <body>
