removed some references to grids

--- a/content/index.html
+++ b/content/index.html
@@ -3,18 +3,14 @@
 
 <h2>Welcome to the Ibis webpage.</h2>
 
-<p>This is the website of Ibis. Ibis is an <em>open source</em> Java grid software project of the <a href="http://www.cs.vu.nl/cs">Computer Systems group</a>, which is part of the <a href="http://www.cs.vu.nl">Computer Science department</a> of the <a href="http://www.few.vu.nl">Faculty of Sciences</a> at the <a href="http://www.vu.nl">Vrije Universiteit</a>, Amsterdam, The Netherlands.</p>
+<p>This is the website of Ibis. Ibis is an <em>open source</em> Java distributed computing software project of the <a href="http://www.cs.vu.nl/cs">Computer Systems group</a>, which is part of the <a href="http://www.cs.vu.nl">Computer Science department</a> of the <a href="http://www.few.vu.nl">Faculty of Sciences</a> at the <a href="http://www.vu.nl">VU University</a>, Amsterdam, The Netherlands.</p>
 
-<p>The main goal of the Ibis project is to create an efficient Java-based platform for grid computing. The Ibis project currently consists of the IPL (a communication library), a variety of programming models, the Java Grid Application Toolkit, and the Zorilla peer-to-peer grid middleware. All components can be deployed on any grid platform, due to the use of Java. Ibis is part of SP 3.1 of the 
-<a href="http://www.vl-e.nl">VL-e</a> project.</p>
+<p>The main goal of the Ibis project is to create an efficient Java-based platform for distributed computing. The Ibis project currently consists of the IPL (a communication library), a variety of programming models, the Java Grid Application Toolkit, and the Zorilla peer-to-peer middleware. All components can be deployed on any compute platform, due to the use of Java.
 
 <p>See the various sections of this website for documentation on the Ibis subprojects, downloads, users of Ibis and other information.</p>
 
-<p>For the all-important question "How do I pronounce Ibis?", please <a
-href="downloads/rob.mp3">listen to</a> the recording of one of the
+<p>For the all-important question "How do I pronounce Ibis?", please <a href="downloads/rob.mp3">listen to</a> the recording of one of the
 project members explaining this in detail.</p>
-
-<p>Download a demo video, showing a galaxy simulation written with Satin (one of the Ibis programming models) and deployed with the JavaGAT <a href="downloads/barnes-demo-xvid.avi">here</a>.</p>
 
 <p class=centered>
 <img src="images/ibis-factory.png" alt="ibis-factory" >
