--- a/content/projects.html
+++ b/content/projects.html
@@ -3,24 +3,23 @@
 
 <h3>The Ibis Philosophy</h3>
 
-<p>
-Although grids hold great promise for many scientific applications, writing
-efficient and portable grid applications is notoriously difficult. Grid
-programmers often have to use low-level programming interfaces that change
-frequently, and they have to deal with heterogeneity, connectivity problems,
-and fault tolerance. Also, managing a running application is complicated,
-because the execution environment changes dynamically, as resources come and
-go.
-</p>
-
 <p>The Ibis project aims to drastically simplify the programming and deployment
-process of high-performance grid applications. The Ibis philosophy is that grid
+process of high-performance distributed applications. The Ibis philosophy is that
 applications should be developed on a local workstation and simply be launched
 from there. This write-and-go philosophy requires minimalistic assumptions
 about the execution environment, and sends most of the environment&#39;s
 software (e.g., libraries) along with the application. The Ibis system is
-designed to run in a hostile grid environment that is dynamic, heterogeneous,
+designed to run in a hostile environment that is dynamic, heterogeneous,
 and suffers from connectivity problems. </p>
+
+<p>
+<img src="images/jungle-system.png" alt="A Computing Jungle" >
+</p>
+
+<p>The Image above depicts a worst-case scenario computing platform, consisting
+of grids, clouds, clusters, and other compute platforms, including specialized
+hardware such as GPU's. We name such a heterogeneous and hostile system a
+Jungle.
 
 <h3>Subprojects of Ibis</h3>
 
