Added a faq for Globus 5

--- a/content/javagat-faq.html
+++ b/content/javagat-faq.html
@@ -11,3 +11,8 @@ JavaGAT releases. </p>
 
 <p><strong>Question: How do I write my own adaptor?<br /></strong>
 Answer: Download JavaGAT and have a look at the file doc/adaptorwriting.txt </p>
+
+<p><strong>Question: Does JavaGAT work on Globus 5?<br /></strong>
+Answer: Yes, the globus resourcebroker adaptor and the gridftp file adaptors work. Since
+Globus 5 does not have web-services like ws-gram, the web-services-based gt42 and wsgt4new
+adaptors don't work on Globus 5.</p>
