--- a/content/javagat-faq.html
+++ b/content/javagat-faq.html
@@ -10,7 +10,7 @@ Please let us know when you created a new adaptor. It might be included in new
 JavaGAT releases. </p>
 
 <p><strong>Question: How do I write my own adaptor?<br /></strong>
-Answer: Download JavaGAT and have a look at the file doc/adaptorwriting.txt </p>
+Answer: Download JavaGAT and have a look at the file doc/adaptorwriting.txt.</p>
 
 <p><strong>Question: Does JavaGAT work on Globus 5?<br /></strong>
 Answer: Yes, the globus resourcebroker adaptor and the gridftp file adaptors work. Since
