--- a/content/tutorial.html
+++ b/content/tutorial.html
@@ -1,57 +1,21 @@
 <h2>Tutorial</h2>
 
-<p>Slides for the Ibis Tutorial given at CCGRID 2008</p>
+<p>Slides for the Ibis Tutorial Of November 2011</p>
 
 <ul>
-	<li>Introduction
-	<a href=tutorial/20080519-CCGrid08-Part-1-Introduction.pdf>[pdf]</a>
-	<a href=tutorial/20080519-CCGrid08-Part-1-Introduction.odp>[odp]</a>
+    <li>Introduction
+    <a href=tutorial/IbisIntroduction.pdf>[pdf]</a>
 
-	<li>Creating A User-Friendly Grid
+    <li>Ibis As Master Key
+    <a href=tutorial/IbisAsMasterKey.pdf>[pdf]</a>
 
-	<ul>
+    <li>Ibis As Glue
+    <a href=tutorial/IbisAsGlue.pdf>[pdf]</a>
 
-		<li>JavaGAT
-		<a href=tutorial/20080519-CCGrid08-Part-2-JavaGAT.pdf>[pdf]</a>
-		<a href=tutorial/20080519-CCGrid08-Part-2-JavaGAT.odp>[odp]</a>
+    <li>Ibis Deploy and Coupled Codes
+    <a href=tutorial/DeployAndCoupledCodes.pdf>[pdf]</a>
 
-		<li>Zorilla
-		<a href=tutorial/20080519-CCGrid08-Part-3-Zorilla.pdf>[pdf]</a>
-		<a href=tutorial/20080519-CCGrid08-Part-3-Zorilla.odp>[odp]</a>
-
-		<li>Smartsockets
-		<a href=tutorial/20080519-CCGrid08-Part-4-SmartSockets.pdf>[pdf]</a>
-		<a href=tutorial/20080519-CCGrid08-Part-4-SmartSockets.odp>[odp]</a>
-
-	</ul>
-
-	<li>Using The Grid
-
-	<ul>
-
-		<li>IPL
-		<a href=tutorial/20080519-CCGrid08-Part-5-IPL.pdf>[pdf]</a>
-		<a href=tutorial/20080519-CCGrid08-Part-5-IPL.odp>[odp]</a>
-
-		<li>Satin
-		<a href=tutorial/20080519-CCGrid08-Part-6-Satin-Short.pdf>[pdf]</a>
-		<a href=tutorial/20080519-CCGrid08-Part-6-Satin-Short.odp>[odp]</a>
-		
-		<li>Other Programming Models
-		<a href=tutorial/20080519-CCGrid08-Part-7-OtherModels.pdf>[pdf]</a>
-		<a href=tutorial/20080519-CCGrid08-Part-7-OtherModels.odp>[odp]</a>
-
-
-	</ul>
-
-	<li>Users
-	<a href=tutorial/20080519-CCGrid08-Part-8-Users.pdf>[pdf]</a>
-	<a href=tutorial/20080519-CCGrid08-Part-8-Users.pdf>[odp]</a>
-
-	<li>Users 2
-	<a href=tutorial/20080519-CCGrid08-Part-9-Users-2.pdf>[pdf]</a>
-	<a href=tutorial/20080519-CCGrid08-Part-9-Users-2.ppt>[ppt]</a>
-	<a href=tutorial/20080519-CCGrid08-Part-9-Users-2-video.wmv>[video]</a>
-
+    <li>Future of Ibis
+    <a href=tutorial/IbisFuture.pdf>[pdf]</a>
 </ul>
 
