add some spae for slides and software

--- a/content/tutorial.html
+++ b/content/tutorial.html
@@ -1,7 +1,8 @@
 <h2>Tutorial</h2>
 
-<p>Slides for the Ibis Tutorial Of November 2011</p>
+<p>Slides for the Ibis Mini-Course (November/December 2011)</p>
 
+<p>Lecture Day</p>
 <ul>
     <li>Introduction
     <a href=tutorial/IbisIntroduction.pdf>[pdf]</a>
@@ -18,4 +19,12 @@
     <li>Future of Ibis
     <a href=tutorial/IbisFuture.pdf>[pdf]</a>
 </ul>
+
+<p>Hands-on Day</p>
+<ul>
+    <li>Not available yet</li>
+</ul>
+
+<p>All software for the hands-on will be available <a href=tutorial/software>here</a></p>
+
 
