--- a/content/demos.html
+++ b/content/demos.html
@@ -1,5 +1,19 @@
 <h2>Demos</h2>
 
+<h3>Ibis/AMUSE demo showing the evolution of an Embedded Star Cluster</h3>
+
+<p> Output of 3D Visualization</p>
+<iframe title="YouTube video player" class="youtube-player" type="text/html" width="480" height="390" src="http://www.youtube.com/embed/FMTOJG-RB18" frameborder="0" allowFullScreen allowscriptaccess=false ></iframe>
+<p><a href="http://www.youtube.com/watch?v=FMTOJG-RB18">Watch this video on Youtube</a></p>
+
+<p> Output of 3D Visualization (high contrast version for projectors)</p>
+<iframe title="YouTube video player" class="youtube-player" type="text/html" width="480" height="390" src="http://www.youtube.com/embed/yE8LL1rE880" frameborder="0" allowFullScreen allowscriptaccess=false ></iframe>
+<p><a href="http://www.youtube.com/watch?v=yE8LL1rE880">Watch this video on Youtube</a></p>
+
+<p> Output of IbisDeploy Visualization</p>
+<iframe title="YouTube video player" class="youtube-player" type="text/html" width="480" height="390" src="http://www.youtube.com/embed/_mm0lq8LJMg" frameborder="0" allowFullScreen allowscriptaccess=false ></iframe>
+<p><a href="http://www.youtube.com/watch?v=_mm0lq8LJMg">Watch this video on Youtube</a></p>
+
 <h3>A Demonstration Of Color Based Object Recognition On A Real-World Distributed System</h3>
 
 <iframe title="YouTube video player" class="youtube-player" type="text/html" width="480" height="390" src="http://www.youtube.com/embed/_WUA1WT_xFQ" frameborder="0" allowFullScreen allowscriptaccess=false ></iframe>
