--- a/content/demos.html
+++ b/content/demos.html
@@ -6,7 +6,7 @@
 <iframe title="YouTube video player" class="youtube-player" type="text/html" width="480" height="390" src="http://www.youtube.com/embed/FMTOJG-RB18" frameborder="0" allowFullScreen allowscriptaccess=false ></iframe>
 <p><a href="http://www.youtube.com/watch?v=FMTOJG-RB18">Watch this video on Youtube</a></p>
 
-<p> Output of 3D Visualization (high contrast version for projectors)</p>
+<p> Output of 3D Visualization (high contrast version for e.g. projectors)</p>
 <iframe title="YouTube video player" class="youtube-player" type="text/html" width="480" height="390" src="http://www.youtube.com/embed/yE8LL1rE880" frameborder="0" allowFullScreen allowscriptaccess=false ></iframe>
 <p><a href="http://www.youtube.com/watch?v=yE8LL1rE880">Watch this video on Youtube</a></p>
 
