Added user: European Space Agency

--- a/content/users.html
+++ b/content/users.html
@@ -150,9 +150,20 @@ Ibis has been used for many of the KOALA scheduling experiments.
 
     <tr>
 	<td>Vrije Universiteit Amsterdam <a href="http://www.vu.nl">www.vu.nl</a></td>
-	<td>JavaGAT is developped here. Several of our grid projects use it.
+	<td>JavaGAT is developed here. Several of our grid projects use it.
 	    We also use it for the Grid Computing course here, students have to write grid
 	    progams with the JavaGAT.</td>
+    </tr>
+
+    <tr>
+	<td>The <a href="http://www.ogf.org">Open Grid Forum</a> SAGA standard (Simple API for Grid Applications). <a href="http://saga.cct.lsu.edu">saga.cct.lsu.edu</a>
+	</td>
+	<td>The Java reference implementation of the SAGA standard (JavaSAGA) uses JavaGAT to access the grid middleware.</td>
+    </tr>
+
+    <tr>
+	<td>European Space Agency (ESA) <a href="http://www.esa.int">www.esa.int</a></td>
+	<td>JavaSAGA and JavaGAT are currently evaluated by ESA for use in a GRID infrastructure.</td>
     </tr>
 
     <tr>
@@ -161,12 +172,6 @@ Ibis has been used for many of the KOALA scheduling experiments.
 	<td>The JavaGAT is currently developed as a part of the Dutch Virtual Labs for E-science
 	    project (Vl-e) middleware.
 	</td>
-    </tr>
-
-    <tr>
-	<td>The <a href="http://www.ogf.org">Open Grid Forum</a> SAGA standard (Simple API for Grid Applications). <a href="http://saga.cct.lsu.edu">saga.cct.lsu.edu</a>
-	</td>
-	<td>The Java reference implementation of the SAGA standard uses JavaGAT to access the grid middleware.</td>
     </tr>
 
     <tr>
